github, favorites, votes.

--- a/src/client/font-matcher.html
+++ b/src/client/font-matcher.html
@@ -1,5 +1,5 @@
 <head>
   <title>Font Matcher</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
 </head>
