--- a/src/client/font-matcher.html
+++ b/src/client/font-matcher.html
@@ -2,4 +2,7 @@
   <title>Font Matcher</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
+
+  <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet" type="text/css" />
 </head>
