--- a/src/client/font-matcher.html
+++ b/src/client/font-matcher.html
@@ -5,4 +5,14 @@
 
   <link href="https://fonts.googleapis.com/css?family=Homemade+Apple" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet" type="text/css" />
+  <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-44491698-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
