--- a/src/client/font-matcher.html
+++ b/src/client/font-matcher.html
@@ -1,10 +1,12 @@
 <head>
   <title>Font Matcher</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
 
+  <link rel="stylesheet" type="text/css" href="/css/tipped/tipped.css"/>
   <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Krona+One" rel="stylesheet" type="text/css" />
+  <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.10/webfont.js"></script>
+  <script type="text/javascript" src="/js/tipped/tipped.js"></script>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
